# devops-agent

./: .editorconfig  .env.example  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  ansible.cfg  conductor.json  docker-compose.yml  justfile  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build-test.yml  pre-commit.yml
.ipython/profile_default/startup/: 00-imports.py
agent/: config.py  create_ansible_playbook.py  edit_ansible_playbook.py  generate_playbook.py  inventory.py  main.py  orchestrator.py  playbook_drafter.py  playbook_metadata.py  playbook_policy.py  secrets_manager.py  tools.py  utils.py
agent/tools/: __init__.py  agent.py  ansible.py  git.py  web.py
ansible/: .gitignore  inventory.ini
ansible/playbooks/: deploy-and-validate-minio.yaml  display-current-time.yaml  fix-raspberry-pi-boot-cmdline-cgroup.yaml  hello-cluster.yaml  hello-control.yaml  hello-local-test.yaml  hello-workers.yaml  hello-world-playbook.yaml  install-and-validate-helm.yaml  install-control-node-utilities.yaml  install-grafana.yaml  install-k3s.yaml  install-prometheus.yaml  install-ripgrep-control.yaml  install-validate-oci-registry.yaml  k3s-cluster-management.yaml  k3s-memory-cgroup-setup.yaml  list-files.yaml  provision-grafana-prometheus-datasource.yaml  repair-kubernetes-kubeconfig.yaml  uninstall-grafana.yaml
apps/api/: manage.py
apps/api/conversations/: apps.py  models.py  services.py  tasks.py  urls.py  views.py
apps/api/conversations/management/commands/: runconversation.py
apps/api/conversations/migrations/: 0001_initial.py
apps/api/project/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
devops_bot/: approval.py  chat.py  config.py  factory.py  history.py  main.py  runner.py  session.py  tui.py  ui.py  workflow.py
devops_bot/agents/: orchestrator.py  playbook_editor.py  playbook_generator.py  playbook_metadata.py
devops_bot/tools/: __init__.py  ansible.py  git.py  kubernetes.py  playbooks.py  services.py  web.py
docs/: autonomous-devops-run-history.json  autonomous-devops-run-history.jsonl  django-agent-runner-plan.md  service-discovery-registry-plan.md  specialized-devops-agents.md
helm/: .gitignore  README.md
helm/charts/: README.md
helm/charts/nginx/: Chart.yaml  README.md  values.yaml
helm/charts/nginx/charts/: nginx-22.6.12.tgz
homelab_operator/: approval.py  config.py  history.py  secrets.py  session.py  tui.py
homelab_operator/agents/: __init__.py  env_example_editor.py  helm_chart_editor.py  orchestrator.py  playbook_editor.py
homelab_operator/tools/: ansible.py  env.py  git.py  kubernetes.py  playbooks.py
scripts/: bootstrap.sh  format_markdown.py  setup-dev.sh
services/: README.md  registry.yaml
skills/kubernetes-troubleshooting/: SKILL.md
skills/kubernetes-troubleshooting/agents/: openai.yaml
skills/playbook-configuration/: SKILL.md
skills/playbook-configuration/agents/: openai.yaml
skills/pr-creation/: SKILL.md
skills/pr-creation/agents/: openai.yaml
skills/repo-pr-creation/: SKILL.md
skills/repo-pr-creation/agents/: openai.yaml
tests/: conftest.py  test_config.py  test_create_ansible_playbook.py  test_edit_ansible_playbook.py  test_factory.py  test_generate_playbook.py  test_history.py  test_main.py  test_orchestrator.py  test_playbook_creation.py  test_playbook_drafter.py  test_playbook_editing.py  test_playbook_metadata.py  test_run_history.py  test_runner.py  test_secret_manager.py  test_secrets.py  test_session.py  test_stdout_guards.py  test_tools.py  test_tui.py  test_utils.py  test_workflow.py
tests/_vcr_cassettes/: test_tools.test_run_ansible_playbook_success.yaml
tests/api/: test_conversations.py
tests/tools/: test_ansible.py  test_env.py  test_git.py  test_kubernetes.py  test_kubernetes_kwok.py  test_services.py  test_web.py
tests/tools/_http_cassettes/: TestHttpGet.test_http_get_fetches_ansible_docs.yaml  TestHttpGet.test_http_get_records_run_history_for_success.yaml  test_http_get_fetches_ansible_docs.yaml  test_http_get_records_run_history_for_success.yaml
tests/tools/_vcr_cassettes/: test_ansible.test_run_ansible_playbook_success.yaml  test_git.test_create_git_branch_from_local_base_branch.yaml  test_git.test_create_git_commit_with_staging.yaml  test_git.test_git_status.yaml  test_git.test_list_git_commits.yaml
