[project]
name = "devops-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.0",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.1.1",
    "strands-agents-tools>=0.3.0",
    "strands-agents[openai]>=1.34.1",
]

[dependency-groups]
dev = [
    "ipython>=9.12.0",
    "mypy>=1.18.2",
    "pdbpp>=0.12.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.15.9",
    "subprocess-vcr>=0.1.0",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--subprocess-vcr=replay"
env_files = [".env.example"]
markers = [
    "git_http_integration: tests that require the git-http-mock-server Node dependency",
    "subprocess_vcr: record and replay subprocess output",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.13"
files = ["agent", "tests"]
check_untyped_defs = true
ignore_missing_imports = true
pretty = true
show_error_codes = true
warn_unused_ignores = true
