[project]
name = "devops-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery[redis]>=5.5.3",
    "ddgs>=9.6.1",
    "django>=5.2.7",
    "langfuse>=3.9.1",
    "pydantic>=2.12.0",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "strands-agents-tools>=0.3.0",
    "strands-agents[openai,otel]>=1.34.1",
    "textual>=1.0.0",
]

[project.scripts]
devops-agent = "devops_bot.main:main"
devops-agent-chat = "devops_bot.chat:main"
devops-agent-tui = "devops_bot.tui:main"

[dependency-groups]
dev = [
    "ipython>=9.12.0",
    "mypy>=1.18.2",
    "pdbpp>=0.12.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-dotenv>=0.5.2",
    "pytest-django>=4.11.1",
    "pytest-vcr>=1.0.2",
    "ruff>=0.15.9",
    "subprocess-vcr>=0.1.0",
    "types-pyyaml>=6.0.12.20250915",
    "vcrpy>=7.0.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--subprocess-vcr=replay"
env_files = [".env.example"]
DJANGO_SETTINGS_MODULE = "apps.api.project.settings"
markers = [
    "git_http_integration: tests that require the git-http-mock-server Node dependency",
    "kwok_integration: tests that require a local KWOK cluster and real helm/kubectl subprocesses",
    "subprocess_vcr: record and replay subprocess output",
    "vcr: tests that record and replay HTTP traffic",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["devops_bot*"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.13"
files = ["devops_bot", "tests"]
check_untyped_defs = true
ignore_missing_imports = true
pretty = true
show_error_codes = true
warn_unused_ignores = true
